--- a/literature/notebook.bib
+++ b/literature/notebook.bib
@@ -35,6 +35,28 @@
   owner        = {bk},
 }
 
+@Online{NVIDIA_CUDA_CAP_2022,
+  author   = {NVIDIA{.}Developer},
+  date     = {2022-07-20},
+  editor   = {NVIDIA{ }Corporation},
+  title    = {CUDA GPUs - Compute Capability},
+  url      = {https://developer.nvidia.com/cuda-gpus},
+  language = {English},
+  urldate  = {2022-08-31},
+  keywords = {URL},
+}
+
+@Online{Wiki_SYCL,
+  author   = {Wikipedia{: }SYCL},
+  date     = {2022-08-01},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  title    = {SYCL},
+  url      = {https://en.wikipedia.org/w/index.php?title=SYCL&oldid=1101810571},
+  language = {English},
+  urldate  = {2022-08-31},
+  keywords = {URL},
+}
+
 @Online{Wiki_CUDA,
   author   = {Wikipedia{: }CUDA},
   date     = {2022-08-28},
@@ -46,6 +68,28 @@
   keywords = {URL},
 }
 
+@Online{Kaggle_IrisDS,
+  author   = {Srinagar},
+  date     = {2018-03-22},
+  title    = {Iris Flower Dataset},
+  url      = {https://www.kaggle.com/datasets/arshid/iris-flower-dataset},
+  language = {English},
+  subtitle = {Iris flower data set used for multi-class classification},
+  urldate  = {2022-08-31},
+  keywords = {URL},
+}
+
+@Online{Wiki_VM,
+  author   = {Wikipedia{: }VM},
+  date     = {2022-08-17},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Virtual machine},
+  url      = {https://en.wikipedia.org/w/index.php?title=Virtual_machine&oldid=1104946655},
+  urldate  = {2022-08-31},
+}
+
 @Online{Wiki_OpenCL,
   author   = {Wikipedia{: }OpenCL},
   date     = {2022-08-21},
@@ -55,6 +99,130 @@
   language = {English},
   urldate  = {2022-08-30},
   keywords = {URL},
+}
+
+@Article{CUDA_OpenCL_Perf_2011,
+  author    = {Kamran Karimi and Neil G. Dickson and Firas Hamze},
+  date      = {2011-05-16},
+  title     = {A Performance Comparison of CUDA and OpenCL},
+  doi       = {https://doi.org/10.48550/arXiv.1005.2581},
+  url       = {https://arxiv.org/abs/1005.2581},
+  urldate   = {2022-08-31},
+  abstract  = {CUDA and OpenCL are two different frameworks for GPU programming. OpenCL is an open standard that can be used to program CPUs, GPUs, and other devices from different vendors, while CUDA is specific to NVIDIA GPUs. Although OpenCL promises a portable language for GPU programming, its generality may entail a performance penalty. In this paper, we use complex, near-identical kernels from a Quantum Monte Carlo application to compare the performance of CUDA and OpenCL. We show that when using NVIDIA compiler tools, converting a CUDA kernel to an OpenCL kernel involves minimal modifications. Making such a kernel compile with ATI's build tools involves more modifications. Our performance tests measure and compare data transfer times to and from the GPU, kernel execution times, and end-to-end application execution times for both CUDA and OpenCL.},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords  = {book},
+  publisher = {arXiv},
+}
+
+@Online{DL_Raspi_2022,
+  author       = {Politiek, Rients},
+  date         = {2022-08-16},
+  title        = {Deep learning with Raspberry Pi and alternatives in 2022},
+  url          = {https://qengineering.eu/deep-learning-with-raspberry-pi-and-alternatives.html},
+  language     = {English},
+  organization = {Q-engineering},
+  urldate      = {2022-08-31},
+  keywords     = {URL},
+}
+
+@Online{TF2_Raspi4_2019,
+  author   = {Johnson, Leigh},
+  date     = {2019-06-24},
+  title    = {Portable Computer Vision: TensorFlow 2.0 on a Raspberry Pi},
+  url      = {https://towardsdatascience.com/portable-computer-vision-tensorflow-2-0-on-a-raspberry-pi-part-1-of-2-84e318798ce9},
+  language = {English},
+  urldate  = {2022-08-31},
+  keywords = {URL},
+}
+
+@Online{CUDA_vs_OpenCL_2021,
+  author   = {Exterman, Dori},
+  date     = {2021-06-07},
+  keywords = {URL},
+  language = {English},
+  title    = {CUDA vs OpenCL: Which to Use for GPU Programming},
+  url      = {https://www.incredibuild.com/blog/cuda-vs-opencl-which-to-use-for-gpu-programming},
+  urldate  = {2022-08-31},
+}
+
+@Online{ML_Raspi4_2019,
+  author   = {Allan, Alasdair},
+  date     = {2019-06-24},
+  keywords = {URL},
+  language = {English},
+  title    = {Benchmarking Machine Learning on the New Raspberry Pi 4, Model B},
+  url      = {https://www.hackster.io/news/benchmarking-machine-learning-on-the-new-raspberry-pi-4-model-b-88db9304ce4},
+  urldate  = {2022-08-31},
+}
+
+@Online{TF_OpenCL_2022,
+  date         = {2022-06-07},
+  editor       = {IndianTechWarrior},
+  title        = {Does TensorFlow Support OpenCL?},
+  url          = {https://indiantechwarrior.com/does-tensorflow-support-opencl/},
+  language     = {English},
+  organization = {IndianTechWarrior},
+  urldate      = {2022-08-31},
+  keywords     = {URL},
+}
+
+@Online{TF_OpenCL_SYCL_2016,
+  author       = {Iwanski, Luke},
+  date         = {2016-06-01},
+  title        = {TensorFlow for OpenCL using SYCL},
+  url          = {https://www.codeplay.com/portal/blogs/2016/06/01/tensorflow-for-opencl-using-sycl.html},
+  language     = {English},
+  organization = {Codeplay Software Ltd},
+  urldate      = {2022-08-31},
+  keywords     = {URL},
+}
+
+@Online{OpenCL_Raspi_2022,
+  author       = {Politiek, Rients},
+  date         = {2022-06-10},
+  keywords     = {URL},
+  language     = {English},
+  organization = {Q-engineering},
+  title        = {Install OpenCL on Raspberry Pi 3 B+},
+  url          = {https://qengineering.eu/install-opencl-on-raspberry-pi-3.html},
+  urldate      = {2022-08-31},
+}
+
+@Online{Wiki_Raspi,
+  author   = {Wikipedia{: }Raspi},
+  date     = {2022-08-28},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Raspberry Pi},
+  url      = {https://en.wikipedia.org/w/index.php?title=Raspberry_Pi&oldid=1107184087},
+  urldate  = {2022-08-31},
+}
+
+@Online{Wiki_IrisDS,
+  author   = {Wikipedia{: }Iris},
+  date     = {2022-08-08},
+  editor   = {Wikipedia{, }The{ }Free{ }Encyclopedia},
+  keywords = {URL},
+  language = {English},
+  title    = {Iris flower data set},
+  url      = {https://en.wikipedia.org/w/index.php?title=Iris_flower_data_set&oldid=1103056245},
+  urldate  = {2022-08-31},
+}
+
+@InCollection{Fisher_1936,
+  author   = {Fisher, R. A.},
+  date     = {1936-09},
+  title    = {The use of multiple measurements in taxonomic problems},
+  doi      = {https://doi.org/10.1111/j.1469-1809.1936.tb02137.x},
+  number   = {2},
+  pages    = {179-188},
+  url      = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-1809.1936.tb02137.x},
+  urldate  = {2022-08-31},
+  volume   = {7},
+  abstract = {The articles published by the Annals of Eugenics (1925–1954) have been made available online as an historical archive intended for scholarly use. The work of eugenicists was often pervaded by prejudice against racial, ethnic and disabled groups. The online publication of this material for scholarly research purposes is not an endorsement of those views nor a promotion of eugenics in any way.},
+  journal  = {Annals of human genetics},
+  keywords = {book},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
